--- a/src/components/movie/movie.css
+++ b/src/components/movie/movie.css
@@ -1,4 +1,5 @@
 .movie {
+  overflow: hidden;
   display: flex;
   width: 451px;
   height: 279px;
@@ -25,9 +26,15 @@
 }
 
 .movie__date {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 22px;
   color: #827E7E;
 }
 .movie__genreList{
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
   display: flex;
 }
 .movie__genre{
@@ -40,6 +47,10 @@
   border: 1px solid #D9D9D9;
   border-radius: 2px;
 }
-.move__description {
+.movie__description {
+  width: 228px;
+  text-overflow: ellipsis;
+  font-weight: 400;
   font-size: 12px;
+  line-height: 22px;
 }
