--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,4 @@
 @import "./components/movieList/movieList.css";
 @import "./components/movieFilter/movieFilter.css";
 @import "./components/footer/footer.css";
+@import "./components/movieSearch/movieSearch.css";
