--- a/src/base.css
+++ b/src/base.css
@@ -1,11 +1,11 @@
-ul {
-  list-style: none;
+body, ul, input, p {
   padding: 0;
   margin: 0;
 }
-p {
-  margin: 0;
+ul {
+  list-style: none;
 }
 body {
+  background-color: rgb(238, 237, 237);
   font-family: 'Inter';
 }
