--- a/src/base.css
+++ b/src/base.css
@@ -9,3 +9,7 @@ body {
   background-color: rgb(238, 237, 237);
   font-family: 'Inter';
 }
+.centered {
+  text-align: center;
+  margin: auto auto;
+}
