--- a/src/components/movie/movie.css
+++ b/src/components/movie/movie.css
@@ -1,15 +1,13 @@
 .movie {
-  overflow: hidden;
   display: flex;
   width: 451px;
-  height: 279px;
+  min-height: 259px;
   filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
   background-color: #FFFFFF;
 }
 
 .movie__image {
   width: 183px;
-  height: 281px;
 }
 
 .movie__main {
@@ -21,8 +19,9 @@
 
 .movie__title {
   margin: 0;
+  width: 200px;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .movie__date {
@@ -47,9 +46,38 @@
   border-radius: 2px;
 }
 .movie__description {
-  width: 228px;
-  text-overflow: ellipsis;
   font-weight: 400;
   font-size: 12px;
   line-height: 22px;
+  width: 228px;
+}
+
+.movie__mark {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 8px;
+  border: 2px solid;
+  border-radius: 50%;
+}
+
+.movie__mark.green{
+  border-color: #66E900;
+}
+.movie__mark.yellow{
+  border-color: #E9D100;
+}
+.movie__mark.orange{
+  border-color: #E97E00;
+}
+.movie__mark.red{
+  border-color: #E90000;
+}
+
+.movie__header{
+  align-items: flex-start;
+}
+
+.movie__userRate{
+  margin-top: auto;
 }
