--- a/src/components/movie/movie.css
+++ b/src/components/movie/movie.css
@@ -1,9 +1,10 @@
 .movie {
   display: flex;
-  width: 451px;
   min-height: 259px;
+  width: 490px;
   filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
   background-color: #FFFFFF;
+  box-sizing: border-box;
 }
 
 .movie__image {
@@ -22,6 +23,7 @@
   width: 200px;
   font-weight: 400;
   font-size: 18px;
+  margin-bottom: 7px;
 }
 
 .movie__date {
@@ -29,6 +31,7 @@
   font-size: 12px;
   line-height: 22px;
   color: #827E7E;
+  margin-bottom: 9px;
 }
 .movie__genreList{
   font-weight: 400;
@@ -49,7 +52,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 22px;
-  width: 228px;
+  width: auto;
 }
 
 .movie__mark {
@@ -80,4 +83,54 @@
 
 .movie__userRate{
   margin-top: auto;
+}
+
+.mobile {
+  display: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .movie{
+    width: 85%;
+    margin: 0 auto;
+  }
+  .movie__description{
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movie{
+    width: 100%;
+    height: 245px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 460px){
+  .movie{
+    padding: 10px;
+  }
+  .movie__image, .movie__main{
+    display: none;
+  }
+  .mobile {
+    display: flex;
+  }
+  .movie__header{
+    display: flex;
+    flex-direction: row;
+  }
+  .movie__header .movie__image{
+    display: block;
+    height: 91px;
+    width: 60px;
+    margin-right: 13px;
+    margin-bottom: 10px;
+  }
+  .movie__main {
+    margin: 0;
+  }
+  .movie__userRate{
+    margin-left:  auto;
+  }
 }
