--- a/src/components/movieSearch/movieSearch.css
+++ b/src/components/movieSearch/movieSearch.css
@@ -1,7 +1,9 @@
 .movieSearch__input {
   width: 100%;
   height: 40px;
-  border-radius: 2px;
+  border-radius: 3px;
   border-color: #D9D9D9;
   box-sizing: border-box;
+  padding: 5px;
+  font-size: 15px
 }
